--- a/ft_irc/Makefile
+++ b/ft_irc/Makefile
@@ -6,7 +6,7 @@ FLAGS = -Wall -Wextra -Werror -std=c++98
 
 RM = rm -rf
 
-SRC = main.cpp srcs/Server.cpp srcs/Client.cpp srcs/Utils.cpp srcs/CommandHandler.cpp srcs/Channel.cpp
+SRC = main.cpp srcs/Server.cpp srcs/Client.cpp srcs/Utils.cpp srcs/CommandHandler.cpp srcs/Channel.cpp srcs/Bot.cpp
 
 OBJ = $(SRC:.cpp=.o)
 
